Fix spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,6 @@
 
 
 html{
-  padding:800px 1100px;
+  padding:100px;
   background-color: rgba(62, 10, 10, 0.216);
 }
